--- a/ui/page05install.ui
+++ b/ui/page05install.ui
@@ -55,6 +55,10 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>toggleDetails</tabstop>
+  <tabstop>textView</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
