--- a/ui/page02eula.ui
+++ b/ui/page02eula.ui
@@ -23,6 +23,12 @@
    </item>
    <item>
     <widget class="QPlainTextEdit" name="textView">
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="tabChangesFocus">
+      <bool>true</bool>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
@@ -63,6 +69,11 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>radioDisagree</tabstop>
+  <tabstop>radioAgree</tabstop>
+  <tabstop>textView</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
  <buttongroups>
