add data/about.txt and About page, update window flags

--- a/ui/page00about.ui
+++ b/ui/page00about.ui
@@ -43,6 +43,11 @@
    </item>
    <item>
     <widget class="QPlainTextEdit" name="textView">
+     <property name="font">
+      <font>
+       <family>Courier New</family>
+      </font>
+     </property>
      <property name="focusPolicy">
       <enum>Qt::NoFocus</enum>
      </property>
